crates/db/src/pg/snapshots/switchyard_db__pg__catalog__tests__pg_role_ddl.snap
---
source: crates/db/src/pg/catalog.rs
expression: ddl
---
CREATE ROLE app WITH LOGIN NOSUPERUSER INHERIT NOCREATEROLE CREATEDB NOREPLICATION NOBYPASSRLS CONNECTION LIMIT 5 VALID UNTIL '2030-01-01 00:00:00+00';
GRANT readers TO app;
COMMENT ON ROLE app IS 'it''s the app';
